# coldwallet

./: .gitignore  BUILDING.md  BUILD_WINDOWS.bat  CHANGES.md  CLEAN_HISTORY.md  README.md  SECURITY_AUDIT.md  build.py  build_all.py  build_exe.py  claude_free.bat  requirements.txt  run_desktop.py
.claude/: settings.local.json
.qwen/: settings.json
cold_wallet/core/: eth_network.py  fee_estimator.py  key_manager.py  qr_receiver.py  transaction.py  tx_builder.py
cold_wallet/storage/: usb_manager.py
core-rust/: BUILD.md  Cargo.toml  pyproject.toml
core-rust/src/: error.rs  key_manager.rs  lib.rs  transaction.rs  usb_manager.rs
desktop_app/: app.py  main_window.py  styles.py
installer/: format_usb.py  sign_offline.py  sign_offline_exe.py  usb_installer_gui.py
pyinstaller_hooks/: runtime_hook.py
redesign/: ethereum-wallet.html
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  crypto.rs  lib.rs  network.rs  usb.rs
zhorawallet-tauri/: MIGRATION_REPORT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
zhorawallet-tauri/src-tauri/: Cargo.toml
zhorawallet-tauri/src-tauri/src/: address_book.rs  lib.rs  main.rs  state.rs  transaction_cache.rs
zhorawallet-tauri/src/assets/: main.css
zhorawallet-tauri/src/components/: ConfirmDialog.vue  ContactFormDialog.vue  Layout.vue  NetworkSelector.vue  NotificationContainer.vue  ParticlesBackground.vue  PasswordDialog.vue  TitleBar.vue  TransactionItem.vue  WalletInitDialog.vue
zhorawallet-tauri/src/composables/: useNotification.ts  useNotifications.ts
zhorawallet-tauri/src/router/: index.ts
zhorawallet-tauri/src/src-tauri/: Cargo.toml  tauri.conf.json
zhorawallet-tauri/src/src-tauri/capabilities/: default.json
zhorawallet-tauri/src/src-tauri/icons/: icon.icns
zhorawallet-tauri/src/src-tauri/src/: commands.rs  crypto.rs  lib.rs  network.rs  networks.rs  state.rs  usb.rs  validation.rs
zhorawallet-tauri/src/stores/: wallet.ts
zhorawallet-tauri/src/types/: index.ts
zhorawallet-tauri/src/utils/: validation.ts
zhorawallet-tauri/src/views/: AddressBook.vue  Dashboard.vue  Receive.vue  Send.vue  Settings.vue  SignBroadcast.vue
