[package]
name = "coldvault_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "coldvault_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

# BIP-39 мнемоника — фиксируем конкретную версию
bip39 = "=2.0.0"

coins-bip32 = "0.13"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
tiny-keccak = { version = "2", features = ["keccak"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive", "zeroize_derive"] }
rand = "0.8"
rlp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
