[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "coldvault-core"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "coldvault_core"
